build/log/idf_py_stdout_output_11332
Command: ninja all
[1/10] Performing build step for 'bootloader'
[1/1] C:\WINDOWS\system32\cmd.exe /C "cd /D C:\Personal\Codes\Code\C\esp-idf\EmbeddedSystemsRobotin\proyecto_micro_algas\build\bootloader\esp-idf\esptool_py && C:\Users\luisd\.espressif\python_env\idf5.5_py3.13_env\Scripts\python.exe C:/espressif/esp-idf-v5.5.3/components/partition_table/check_sizes.py --offset 0x8000 bootloader 0x0 C:/Personal/Codes/Code/C/esp-idf/EmbeddedSystemsRobotin/proyecto_micro_algas/build/bootloader/bootloader.bin"
Bootloader binary size 0x5160 bytes. 0x2ea0 bytes (36%) free.
[2/10] No install step for 'bootloader'
[3/10] Completed 'bootloader'
[4/10] Building C object esp-idf/actuadores/CMakeFiles/__idf_actuadores.dir/pantalla_oled.c.obj
FAILED: esp-idf/actuadores/CMakeFiles/__idf_actuadores.dir/pantalla_oled.c.obj 
ccache C:\Users\luisd\.espressif\tools\xtensa-esp-elf\esp-14.2.0_20251107\xtensa-esp-elf\bin\xtensa-esp32s3-elf-gcc.exe -DESP_PLATFORM -DIDF_VER=\"v5.5.3-dirty\" -DSOC_MMU_PAGE_SIZE=CONFIG_MMU_PAGE_SIZE -DSOC_XTAL_FREQ_MHZ=CONFIG_XTAL_FREQ -D_GLIBCXX_HAVE_POSIX_SEMAPHORE -D_GLIBCXX_USE_POSIX_SEMAPHORE -D_GNU_SOURCE -D_POSIX_READER_WRITER_LOCKS -IC:/Personal/Codes/Code/C/esp-idf/EmbeddedSystemsRobotin/proyecto_micro_algas/build/config -IC:/Personal/Codes/Code/C/esp-idf/EmbeddedSystemsRobotin/proyecto_micro_algas/componentes/actuadores -IC:/espressif/esp-idf-v5.5.3/components/newlib/platform_include -IC:/espressif/esp-idf-v5.5.3/components/freertos/config/include -IC:/espressif/esp-idf-v5.5.3/components/freertos/config/include/freertos -IC:/espressif/esp-idf-v5.5.3/components/freertos/config/xtensa/include -IC:/espressif/esp-idf-v5.5.3/components/freertos/FreeRTOS-Kernel/include -IC:/espressif/esp-idf-v5.5.3/components/freertos/FreeRTOS-Kernel/portable/xtensa/include -IC:/espressif/esp-idf-v5.5.3/components/freertos/FreeRTOS-Kernel/portable/xtensa/include/freertos -IC:/espressif/esp-idf-v5.5.3/components/freertos/esp_additions/include -IC:/espressif/esp-idf-v5.5.3/components/esp_hw_support/include -IC:/espressif/esp-idf-v5.5.3/components/esp_hw_support/include/soc -IC:/espressif/esp-idf-v5.5.3/components/esp_hw_support/include/soc/esp32s3 -IC:/espressif/esp-idf-v5.5.3/components/esp_hw_support/dma/include -IC:/espressif/esp-idf-v5.5.3/components/esp_hw_support/ldo/include -IC:/espressif/esp-idf-v5.5.3/components/esp_hw_support/debug_probe/include -IC:/espressif/esp-idf-v5.5.3/components/esp_hw_support/mspi_timing_tuning/include -IC:/espressif/esp-idf-v5.5.3/components/esp_hw_support/mspi_timing_tuning/tuning_scheme_impl/include -IC:/espressif/esp-idf-v5.5.3/components/esp_hw_support/power_supply/include -IC:/espressif/esp-idf-v5.5.3/components/esp_hw_support/port/esp32s3/. -IC:/espressif/esp-idf-v5.5.3/components/esp_hw_support/port/esp32s3/include -IC:/espressif/esp-idf-v5.5.3/components/esp_hw_support/mspi_timing_tuning/port/esp32s3/. -IC:/espressif/esp-idf-v5.5.3/components/esp_hw_support/mspi_timing_tuning/port/esp32s3/include -IC:/espressif/esp-idf-v5.5.3/components/heap/include -IC:/espressif/esp-idf-v5.5.3/components/heap/tlsf -IC:/espressif/esp-idf-v5.5.3/components/log/include -IC:/espressif/esp-idf-v5.5.3/components/soc/include -IC:/espressif/esp-idf-v5.5.3/components/soc/esp32s3 -IC:/espressif/esp-idf-v5.5.3/components/soc/esp32s3/include -IC:/espressif/esp-idf-v5.5.3/components/soc/esp32s3/register -IC:/espressif/esp-idf-v5.5.3/components/hal/platform_port/include -IC:/espressif/esp-idf-v5.5.3/components/hal/esp32s3/include -IC:/espressif/esp-idf-v5.5.3/components/hal/include -IC:/espressif/esp-idf-v5.5.3/components/esp_rom/include -IC:/espressif/esp-idf-v5.5.3/components/esp_rom/esp32s3/include -IC:/espressif/esp-idf-v5.5.3/components/esp_rom/esp32s3/include/esp32s3 -IC:/espressif/esp-idf-v5.5.3/components/esp_rom/esp32s3 -IC:/espressif/esp-idf-v5.5.3/components/esp_common/include -IC:/espressif/esp-idf-v5.5.3/components/esp_system/include -IC:/espressif/esp-idf-v5.5.3/components/esp_system/port/soc -IC:/espressif/esp-idf-v5.5.3/components/esp_system/port/include/private -IC:/espressif/esp-idf-v5.5.3/components/xtensa/esp32s3/include -IC:/espressif/esp-idf-v5.5.3/components/xtensa/include -IC:/espressif/esp-idf-v5.5.3/components/xtensa/deprecated_include -IC:/espressif/esp-idf-v5.5.3/components/lwip/include -IC:/espressif/esp-idf-v5.5.3/components/lwip/include/apps -IC:/espressif/esp-idf-v5.5.3/components/lwip/include/apps/sntp -IC:/espressif/esp-idf-v5.5.3/components/lwip/lwip/src/include -IC:/espressif/esp-idf-v5.5.3/components/lwip/port/include -IC:/espressif/esp-idf-v5.5.3/components/lwip/port/freertos/include -IC:/espressif/esp-idf-v5.5.3/components/lwip/port/esp32xx/include -IC:/espressif/esp-idf-v5.5.3/components/lwip/port/esp32xx/include/arch -IC:/espressif/esp-idf-v5.5.3/components/lwip/port/esp32xx/include/sys -IC:/Personal/Codes/Code/C/esp-idf/EmbeddedSystemsRobotin/proyecto_micro_algas/managed_components/nixy4__u8g2/include -IC:/espressif/esp-idf-v5.5.3/components/driver/deprecated -IC:/espressif/esp-idf-v5.5.3/components/driver/i2c/include -IC:/espressif/esp-idf-v5.5.3/components/driver/touch_sensor/include -IC:/espressif/esp-idf-v5.5.3/components/driver/twai/include -IC:/espressif/esp-idf-v5.5.3/components/driver/touch_sensor/esp32s3/include -IC:/espressif/esp-idf-v5.5.3/components/esp_pm/include -IC:/espressif/esp-idf-v5.5.3/components/esp_ringbuf/include -IC:/espressif/esp-idf-v5.5.3/components/esp_driver_gpio/include -IC:/espressif/esp-idf-v5.5.3/components/esp_driver_pcnt/include -IC:/espressif/esp-idf-v5.5.3/components/esp_driver_gptimer/include -IC:/espressif/esp-idf-v5.5.3/components/esp_driver_spi/include -IC:/espressif/esp-idf-v5.5.3/components/esp_driver_mcpwm/include -IC:/espressif/esp-idf-v5.5.3/components/esp_driver_ana_cmpr/include -IC:/espressif/esp-idf-v5.5.3/components/esp_driver_i2s/include -IC:/espressif/esp-idf-v5.5.3/components/esp_driver_sdmmc/include -IC:/espressif/esp-idf-v5.5.3/components/sdmmc/include -IC:/espressif/esp-idf-v5.5.3/components/esp_driver_sdspi/include -IC:/espressif/esp-idf-v5.5.3/components/esp_driver_sdio/include -IC:/espressif/esp-idf-v5.5.3/components/esp_driver_dac/include -IC:/espressif/esp-idf-v5.5.3/components/esp_driver_rmt/include -IC:/espressif/esp-idf-v5.5.3/components/esp_driver_tsens/include -IC:/espressif/esp-idf-v5.5.3/components/esp_driver_sdm/include -IC:/espressif/esp-idf-v5.5.3/components/esp_driver_i2c/include -IC:/espressif/esp-idf-v5.5.3/components/esp_driver_uart/include -IC:/espressif/esp-idf-v5.5.3/components/vfs/include -IC:/espressif/esp-idf-v5.5.3/components/esp_driver_ledc/include -IC:/espressif/esp-idf-v5.5.3/components/esp_driver_parlio/include -IC:/espressif/esp-idf-v5.5.3/components/esp_driver_usb_serial_jtag/include -IC:/espressif/esp-idf-v5.5.3/components/esp_driver_twai/include -IC:/Personal/Codes/Code/C/esp-idf/EmbeddedSystemsRobotin/proyecto_micro_algas/componentes/gestor -mlongcalls  -fno-builtin-memcpy -fno-builtin-memset -fno-builtin-bzero -fno-builtin-stpcpy -fno-builtin-strncpy -fdiagnostics-color=always -ffunction-sections -fdata-sections -Wall -Werror=all -Wno-error=unused-function -Wno-error=unused-variable -Wno-error=unused-but-set-variable -Wno-error=deprecated-declarations -Wextra -Wno-error=extra -Wno-unused-parameter -Wno-sign-compare -Wno-enum-conversion -gdwarf-4 -ggdb -Og -fno-shrink-wrap -fmacro-prefix-map=C:/Personal/Codes/Code/C/esp-idf/EmbeddedSystemsRobotin/proyecto_micro_algas=. -fmacro-prefix-map=C:/espressif/esp-idf-v5.5.3=/IDF -fstrict-volatile-bitfields -fno-jump-tables -fno-tree-switch-conversion -std=gnu17 -Wno-old-style-declaration -MD -MT esp-idf/actuadores/CMakeFiles/__idf_actuadores.dir/pantalla_oled.c.obj -MF esp-idf\actuadores\CMakeFiles\__idf_actuadores.dir\pantalla_oled.c.obj.d -o esp-idf/actuadores/CMakeFiles/__idf_actuadores.dir/pantalla_oled.c.obj -c C:/Personal/Codes/Code/C/esp-idf/EmbeddedSystemsRobotin/proyecto_micro_algas/componentes/actuadores/pantalla_oled.c
C:/Personal/Codes/Code/C/esp-idf/EmbeddedSystemsRobotin/proyecto_micro_algas/componentes/actuadores/pantalla_oled.c: In function 'caratula_luz':
C:/Personal/Codes/Code/C/esp-idf/EmbeddedSystemsRobotin/proyecto_micro_algas/componentes/actuadores/pantalla_oled.c:92:8: error: suggest parentheses around assignment used as truth value [-Werror=parentheses]
   92 |     if(prueba=0 || prueba<35){
      |        ^~~~~~
C:/Personal/Codes/Code/C/esp-idf/EmbeddedSystemsRobotin/proyecto_micro_algas/componentes/actuadores/pantalla_oled.c: At top level:
C:/Personal/Codes/Code/C/esp-idf/EmbeddedSystemsRobotin/proyecto_micro_algas/componentes/actuadores/pantalla_oled.c:33:13: warning: 'caratula_turbidez' defined but not used [-Wunused-function]
   33 | static void caratula_turbidez(u8g2_t* u8){
      |             ^~~~~~~~~~~~~~~~~
cc1.exe: some warnings being treated as errors
[5/10] Building C object esp-idf/actuadores/CMakeFiles/__idf_actuadores.dir/u8g2_esp32_hal.c.obj
ninja: build stopped: subcommand failed.
